// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1651556897012,
      "mascota": "Nuevo nombre bro",
      "propietario": "Kris",
      "sintomas": "Solo duerme",
      "telefono": "6623536317",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1651556897012,
      "mascota": "Shimuelo",
      "propietario": "Kris",
      "sintomas": "Solo duerme",
      "telefono": "6623536317",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
